tests/neg-custom-args/captures/i25028.scala
def foo(head: => Int, tail: (=> Int)*): List[Int] = // error
  head :: tail.toList

def bar(head: => Int, tail: (-> Int)*): List[Int] = // error
  head :: tail.toList
